--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
     depends_on:
       - kafka
       - schema-registry
+      - connect
     volumes:
       - ./variants_svc:/app
     working_dir: /app
